# keinonto

./: .gitignore  .pre-commit-config.yaml  Dockerfile.test  LICENSE  PROJECT_RULES.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
.cursor/rules/: code-quality.rule  git-workflow.rule  project-specific.rule  python-schema.rule
keinonto/: __init__.py  cli.py
keinonto/domain/entities/: word.py
keinonto/domain/interfaces/: word_repository.py
keinonto/domain/services/: word_form_manager.py
keinonto/domain/value_objects/: case.py  number.py  stem_type.py  word_form.py
keinonto/infrastructure/database/: config.py  models.py  sqlite_repository.py
keinonto/presentation/api/: word_generator.py
tests/: test_performance.py  test_sqlite_repository.py  test_word_generator.py
